# kestro-ha

./: .gitignore  01_setup_sdk.sh  02_build.sh  10_setup_rpi.sh  11_setup_target.sh  31_debug_attach.sh  32_run.sh  SNIPPETS.md  setup.cfg
angular/: package-lock.json
python/: kestro.ini
python/kestro/: __init__.py  __main__.py  command_line.py  config.py
python/kestro/peripherals/: network.py  peripheral_service.py
python/kestro/peripherals/display/: __init__.py  base_display.py  hd44780_4bit.py  hd44780_8bit.py  ssd1306_display.py  ssd1306_display_spi.py
python/kestro/peripherals/gpio/: __init__.py  base_gpio.py  mcp23017_gpio.py
python/kestro/peripherals/sensors/: __init__.py  base_distancesensor.py  base_humiditysensor.py  base_powersensor.py  base_sensor.py  base_temperaturesensor.py  dht22.py  hc_sr04.py  ina260.py  ina260_circuitpython.py  ina260_powersensor.py
python/kestro/webapp/: webserver.py
python/kestro/webapp/controllers/: kestro_controller.py  peripherals_controller.py
python/kestro/webapp/static/: main.e4bf7ca43c85f2d351ac.js
python/kestro/webapp/templates/: index.html
rest/: peripherals.rest
systemd/: kestro.service  mnt-host.automount  mnt-host.mount
udev/: kestro.rules  odroid.rules
