
[metadata]
name = kestro_home-assistant
version = 1.0.0
author = Jan Volckaert
author_email = janvolck@gmail.com
url = https://www.github.com/janvolck/kestro-ha
description = Supporting services and interfaces for integrations with home-assistant
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kestro, home-assistant, raspberrypi, odroid
license = License :: Free For Home Use
classifiers = 
    License :: Free For Home Use
    Programming Language :: Python :: 3
      
[options]
package_dir = 
    = python
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    colorama
    flask
    flask-cors
    netifaces
    paramiko
    Pillow
    pigpio
    smbus2
    waitress
    zeroconf
    adafruit-blinka
    adafruit-blinka-displayio
    adafruit-circuitpython-dht
    adafruit_circuitpython_ds18x20
    adafruit-circuitpython-hcsr04
    adafruit-circuitpython-ina260
    adafruit_circuitpython_displayio_ssd1306

[options.packages.find]
where=python

[options.entry_points]
console_scripts = 
    kestro_home-assistant = kestro.command_line:main


[options.package_data]
* = webapp/templates/*.html, webapp/templates/*.htm, static/*.*, README.md
